# yooxn

./: .gitignore  AGENTS.md  Makefile  README.md  plan.md  pyproject.toml  test_empty_sublabel.rom.sym  test_implicit_parent.rom.sym  test_yooxnas.py  yooxnas.py
.github/workflows/: ci-cd.yml  ci.yml
examples/: anonymous_labels.tal  hello.tal  helpers.tal  includes.tal  mydrawcircle.tal  new_hello.tal  simple.tal  simple2.tal  unless_blocks.tal
mytal/: Makefile  bike  day3.tal  debug  draw-circle.tal  draw-with-keyboard.tal  fizzbuzz.rom.sym  gasket1.tal  hello-animated-sprite.tal  hello-animated-sprite2.tal  hello-animation.tal  hello-console.tal  hello-line.tal  hello-line2.tal  hello-line3.tal  hello-mouse.tal  hello-moving-sprite.tal  hello-moving-sprite2.tal  hello-pixel.tal  hello-sprite.tal  hello-sprites.tal  hello.tal  hellospr2.tal  leftbike  lines1.tal  lines2.tal  myblank.tal  mydrawcircle.tal  myfizzbuzz.tal  myrawrel.tal  noisycirc-anim.tal  noisycirc-anim2.tal  noisycirc-color.tal  noisycirc.tal  rawrel.tal  run  runcli
src/yooxn/: __init__.py  __main__.py  yooxnas.py
tests/: test_errors.py  test_include_flag.py  test_lexer.py  test_macros.py  test_opcodes.py  test_parser_pass1.py  test_parser_pass2.py  test_yooxnas.py
