[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yooxn"
version = "0.1.0"
description = "uxntal assembler in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
yooxnas = "yooxn.yooxnas:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.7",
    "mypy>=1.15.0",
    "ty>=0.0.20",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
