[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yooxn"
version = "0.9.0"
description = "uxntal assembler in Python"
readme = "README.md"
authors = [
    {name = "Jesse Wattenbarger", email = "jesse.j.wattenbarger@gmail.com"}
]
license = {text = "GPL-3.0-only"}
keywords = ["uxn", "uxntal", "assembler", "emulator", "retrocomputing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Assemblers",
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/jjwatt/yooxn"
Repository = "https://github.com/jjwatt/yooxn"
Issues = "https://github.com/jjwatt/yooxn/issues"

[project.scripts]
yooxnas = "yooxn.yooxnas:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.7",
    "mypy>=1.15.0",
    "ty>=0.0.20",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
